--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ import gwIcon from "../images/gw-ico.webp";
   <img
     src={gwIcon.src}
     alt="gw-icon"
-    class="block md:hidden size-[200px] sm:size-[250px] md:size-[300px] rounded-full"
+    class="block md:hidden size-[200px] sm:size-[250px] md:size-[300px] rounded-full icon-img"
   />
   <div>
     <div>
@@ -20,21 +20,21 @@ import gwIcon from "../images/gw-ico.webp";
         Gatitos World
       </h1>
       <p
-        class="max-w-[25rem] text-neutral-500 text-lg mb-5 text-center md:text-start"
+        class="max-w-[30rem] text-neutral-500 text-lg mb-5 text-center md:text-start text-balance"
       >
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam
-        accusantium at harum soluta assumenda deleniti modi sit veniam ipsa.
+        accusantium at harum soluta assumenda deleniti modi sit veniam ipsa. ✨
       </p>
     </div>
     <div class="flex flex-wrap md:flex-nowrap gap-x-4 gap-y-2">
       <a
         href=""
-        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center transition-colors rounded gap-x-2 hover:underline bg-cyan-500 hover:bg-cyan-600"
+        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center rounded gap-x-2 hover:underline bg-cyan-500 animate-pulse"
         ><Discord /> Discord</a
       >
       <a
         href=""
-        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center transition-colors bg-purple-500 rounded gap-x-2 hover:underline hover:bg-purple-600"
+        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center bg-purple-500 rounded gap-x-2 hover:underline"
         ><Secure /> ¡Nuestra Guía!</a
       >
     </div>
@@ -42,6 +42,24 @@ import gwIcon from "../images/gw-ico.webp";
   <img
     src={gwIcon.src}
     alt="gw-icon"
-    class="hidden md:block size-[200px] sm:size-[250px] md:size-[300px] rounded-full"
+    class="hidden md:block size-[200px] sm:size-[250px] md:size-[300px] rounded-full icon-img"
   />
 </section>
+
+<style>
+  .icon-img {
+    animation: moveicon 3s infinite ease-in-out;
+  }
+
+  @keyframes moveicon {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px); /* Sube 10px */
+    }
+    100% {
+      transform: translateY(0); /* Regresa a su posición original */
+    }
+  }
+</style>
