--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -56,10 +56,10 @@ import gwIcon from "../images/gw-ico.webp";
       transform: translateY(0);
     }
     50% {
-      transform: translateY(-10px); /* Sube 10px */
+      transform: translateY(-10px);
     }
     100% {
-      transform: translateY(0); /* Regresa a su posición original */
+      transform: translateY(0);
     }
   }
 </style>
