--- a/src/pages/updates.astro
+++ b/src/pages/updates.astro
@@ -1,7 +1,9 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
+const devName = import.meta.env.PRIV_NAME;
 ---
 
 <MainLayout title="Updates">
   <h1>Actualizaciones</h1>
+  <h1>Dev: {devName ? devName : "no hay na :c"}</h1>
 </MainLayout>
