--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@ import Menu from "@/components/Menu.astro";
         ><Discord /> Discord</a
       >
       <a
-        href=""
+        href="https://guide.gatitosworld.com"
         class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center bg-purple-500 rounded gap-x-2 hover:underline"
         ><Secure /> ¡Nuestra Guía!</a
       >
