--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Hero from "@/components/Hero.astro";
+import Footer from "@/components/ui/Footer.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+import Information from "@/components/Information.astro";
+import Members from "@/components/Members.astro";
 ---
 
-<MainLayout title="Welcome to Astro.">
-  <main>
-    <Hero />
-  </main>
+<MainLayout title="Gatitos World">
+  <Hero />
+  <Information />
+  <Members />
+  <Footer />
 </MainLayout>
