--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -11,7 +11,7 @@ import Events from "@/icons/Events.astro";
 
 <div
   id="menuBurger"
-  class="absolute top-0 right-0 mt-14 bg-white text-black w-[200px]
+  class="absolute top-0 right-0 mt-14 bg-white/10 backdrop-blur-md text-white w-[200px]
          transform opacity-0 -translate-y-5 duration-300 ease-out rounded-sm
          pointer-events-none transition-all"
 >
@@ -19,19 +19,19 @@ import Events from "@/icons/Events.astro";
     <a
       href="https://github.com/yxsifdev/gw-homepage/issues/new"
       target="_blank"
-      class="inline-flex items-center px-4 py-2 font-medium transition-colors rounded-t-sm gap-x-2 hover:text-blue-500"
+      class="inline-flex items-center px-4 py-2 rounded-t-sm gap-x-2 hover:text-blue-500"
     >
       <Bug /> Bugs
     </a>
     <a
       href="/updates"
-      class="inline-flex items-center px-4 py-2 font-medium transition-colors gap-x-2 hover:text-red-400"
+      class="inline-flex items-center px-4 py-2 gap-x-2 hover:text-red-400"
     >
       <Logs /> Actualizaciones
     </a>
     <a
       href="/events"
-      class="inline-flex items-center px-4 py-2 font-medium transition-colors rounded-b-sm gap-x-2 hover:text-purple-500"
+      class="inline-flex items-center px-4 py-2 rounded-b-sm gap-x-2 hover:text-purple-500"
     >
       <Events /> Eventos
     </a>
