--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,7 +3,11 @@ interface Props {
   title: string;
 }
 
+// Supports weights 100-900
+import "@fontsource-variable/onest";
+
 const { title } = Astro.props;
+import gwIcon from "../images/gw-ico.webp";
 ---
 
 <!doctype html>
@@ -12,12 +16,12 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={gwIcon.src} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
-    <main class="max-w-5xl px-4 mx-auto my-0">
+    <main class="">
       <slot />
     </main>
   </body>
@@ -25,6 +29,7 @@ const { title } = Astro.props;
 <style is:global>
   html {
     font-family:
+      "Onest Variable",
       system-ui,
       -apple-system,
       BlinkMacSystemFont,
@@ -36,7 +41,38 @@ const { title } = Astro.props;
       "Open Sans",
       "Helvetica Neue",
       sans-serif;
-    background: #0a011c;
+    /* background: #0a011c; */
+    /* background-color: #171717; */
+    background-color: #272934;
+    /* background: linear-gradient(
+      45deg,
+      rgba(0, 94, 94, 0.822),
+      rgba(60, 1, 78, 0.822),
+      rgba(0, 94, 94, 0.822)
+    );
+    background-repeat: no-repeat;
+    background-size: 400% 400%;
+    animation: bg-gradient 30s ease-in infinite; */
     color-scheme: dark;
+  }
+  @keyframes bg-gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #1a1a23;
   }
 </style>
