--- a/src/components/Members.astro
+++ b/src/components/Members.astro
@@ -9,10 +9,12 @@ import Section from "./Section.astro";
   <h2 class="text-3xl font-bold md:text-4xl">
     🎉 ¡Forma parte de nuestra comunidad! 🎉
   </h2>
-  <p class="md:text-lg text-white/90 drop-shadow-[0_0_10px_#00000058]">
-    Únete a un espacio lleno de entusiastas de la programación, aprende,
-    comparte conocimientos y colabora con otros miembros apasionados como tú.
-    ¡Te estamos esperando!
+  <p
+    class="md:text-lg text-white/90 drop-shadow-[0_0_10px_#00000058] max-w-5xl mx-auto my-0"
+  >
+    Conoce nuevas personas, comparte momentos únicos y disfruta de un espacio
+    diseñado para relajarte, socializar y pasar un buen rato. ¡Estamos ansiosos
+    por darte la bienvenida!
   </p>
   <span
     class="inline-flex px-4 py-2 border-2 rounded-md hover:bg-cyan-500 hover:drop-shadow-[5px_5px_0_#00000058] hover:text-primary font-bold transition cursor-pointer border-cyan-500"
