--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -7,7 +7,6 @@ interface Props {
 import "@fontsource-variable/onest";
 
 const { title } = Astro.props;
-import gwIcon from "../images/gw-ico.webp";
 ---
 
 <!doctype html>
@@ -16,7 +15,7 @@ import gwIcon from "../images/gw-ico.webp";
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href={gwIcon.src} />
+    <link rel="icon" type="image/svg+xml" href="../../src/gw-icon.webp" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
