actualización de diseño

--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -6,6 +6,8 @@ interface Props {
 const { class: addClass } = Astro.props;
 ---
 
-<div class={`bg-secondary rounded-lg p-4 cursor-pointer ${addClass}`}>
+<div
+  class={`bg-zinc-950/70 border border-zinc-900/70 rounded-lg p-4 cursor-pointer hover:scale-105 transition-transform ${addClass}`}
+>
   <slot />
 </div>
