--- a/src/components/Members.astro
+++ b/src/components/Members.astro
@@ -4,7 +4,7 @@ import Section from "./Section.astro";
 
 <Section
   defaultClass="off"
-  class="py-10 my-40 px-4 md:px-0 space-y-4 text-center bg-gradient-to-l from-cyan-500 from-10% via-blue-500 to-purple-500/90"
+  class="px-4 py-10 my-40 space-y-4 text-center md:px-0 bg-gradient-to-l from-transparent via-cyan-500/60 to-transparent"
 >
   <h2 class="text-3xl font-bold md:text-4xl">
     🎉 ¡Forma parte de nuestra comunidad! 🎉
@@ -16,8 +16,10 @@ import Section from "./Section.astro";
     diseñado para relajarte, socializar y pasar un buen rato. ¡Estamos ansiosos
     por darte la bienvenida!
   </p>
-  <span
+  <a
+    href="https://discord.com/invite/gatitos"
+    target="_blank"
     class="inline-flex px-4 py-2 border-2 rounded-md hover:bg-cyan-500 hover:drop-shadow-[5px_5px_0_#00000058] hover:text-primary font-bold transition cursor-pointer border-cyan-500"
-    >+297k Miembros</span
+    >+296k Miembros</a
   >
 </Section>
