--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Footer from "@/components/ui/Footer.astro";
 import MainLayout from "../layouts/MainLayout.astro";
 import Information from "@/components/Information.astro";
 import Members from "@/components/Members.astro";
+import Header from "@/components/ui/Header.astro";
 ---
 
 <MainLayout title="Gatitos World">
