--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,15 +1,14 @@
 ---
 import Discord from "@/icons/Discord.astro";
 import Secure from "@/icons/Secure.astro";
-import gwIcon from "../images/gw-ico.webp";
+import gwIcon from "../images/gw-logo-christmas.webp";
 
-import Menu from "@/components/Menu.astro";
 import Section from "./Section.astro";
 ---
 
 <Section
   defaultClass="on"
-  class="relative flex flex-col items-center justify-center h-screen overflow-hidden md:flex-row md:justify-between gap-y-5 md:gap-0"
+  class="relative flex flex-col items-center justify-center pt-40 overflow-hidden mb-28 md:flex-row md:justify-between gap-y-5 md:gap-0"
 >
   <img
     src={gwIcon.src}
@@ -17,29 +16,34 @@ import Section from "./Section.astro";
     class="block md:hidden size-[200px] sm:size-[250px] md:size-[300px] rounded-full icon-img"
   />
   <div>
-    <div>
+    <div class="max-w-2xl">
       <h1
-        class="mb-5 text-5xl font-bold text-center text-transparent sm:text-6xl md:text-start lg:text-7xl bg-gradient-to-l from-purple-500 to-cyan-500 bg-clip-text"
+        class="mb-5 text-5xl font-semibold text-center sm:font-semibold sm:text-6xl md:text-start lg:text-7xl"
       >
-        Gatitos World
+        ¡Que esperas para unirte a <span class="text-cyan-500"
+          >Gatitos World!</span
+        >
       </h1>
       <p
-        class="max-w-[30rem] text-neutral-300 text-lg mb-5 text-center md:text-start text-balance"
+        class="max-w-[30rem] text-zinc-300 text-lg mb-5 text-center md:text-start text-balance"
       >
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam
-        accusantium at harum soluta assumenda deleniti modi sit veniam ipsa. ✨
+        Una increíble comunidad para conocer gente y pasarla bien hablando
+        mediante los canales. ✨
       </p>
     </div>
     <div class="flex flex-wrap md:flex-nowrap gap-x-4 gap-y-2">
       <a
-        href=""
-        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center rounded gap-x-2 hover:underline bg-cyan-500 animate-pulse"
-        ><Discord /> Discord</a
+        href="https://guide.gatitosworld.com"
+        target="_blank"
+        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center transition-colors duration-300 border rounded-full hover:bg-white/20 border-white/10 bg-white/10 gap-x-2"
+      >
+        <Secure class="size-5" /> ¡Nuestra Guía!</a
       >
       <a
-        href="https://guide.gatitosworld.com"
-        class="inline-flex items-center justify-center w-full px-4 py-2 text-lg font-medium text-center bg-purple-500 rounded gap-x-2 hover:underline"
-        ><Secure /> ¡Nuestra Guía!</a
+        href="https://discord.com/invite/gatitos"
+        target="_blank"
+        class="inline-flex items-center justify-center w-full px-4 py-2 font-medium text-center transition-colors duration-300 rounded-full bg-cyan-500 hover:bg-cyan-600 gap-x-2"
+        ><Discord class="size-5" /> discord.gg/gatitos</a
       >
     </div>
   </div>
@@ -48,7 +52,6 @@ import Section from "./Section.astro";
     alt="gw-icon"
     class="hidden md:block size-[200px] sm:size-[250px] md:size-[300px] rounded-full icon-img"
   />
-  <Menu />
 </Section>
 
 <style>
